--- a/design/notes.html
+++ b/design/notes.html
@@ -50,7 +50,7 @@
 
     <h1>References and inspirations:</h1>
     <h2>Inspiration 1: Everson Kayser's Portfolio website</h2>
-    <img src="" alt="">
+    <img src="../design/design_images/EKweb.png" alt="Everson Kayser website" class="responsive" width="800" height="400">
     <p>This is Everson Kayser’s portfolio website. The user sees this when they scroll down once the website has loaded. 
         I like how this shows the user how much experience he has in the web development industry, his expertise and what software he has worked with. 
         The colour palette is also quite eye-catching, it isn’t too bright or dull- it’s a balance of both, but more on the darker tones side. 
@@ -59,7 +59,7 @@
     </p>
 
     <h2>Inspiration 2: Rafael Varona's Portfolio Website</h2>
-    <img src="" alt="">
+    <img src="../design/design_images/RVWeb.png" alt="Rafael Varona Website" class="responsive" width="800" height="400">
     <p>Rafel Varona offers users a colourful and creative portfolio website. He displays his work from the homepage as seen in the above image. 
         I like the creative side of it, the website does not use text too much there’s a balance of both the use of images and text. 
         For My website mostly the portfolio section, I would like to use a similar approach- where I use screenshots from my project or possibly incorporate videos of gameplay and so forth.
@@ -67,7 +67,7 @@
     </p>
 
     <h2>Inspiration 3: Melyssa Giffins's Portfolio Website</h2>
-    <img src="" alt="">
+    <img src="../design/design_images/MGWeb.png" alt="Melyssa Griffin website" class="responsive" width="800" height="400">
     <p>Melyssa Griffin’s was quite fun and interesting to explore. From the homepage, we can tell what the website will entail and what information we can learn and gather from looking through the website. 
         This website is easy to navigate, and everything is clear to the user making the experience quite great. 
         The link being clearly labelled and easy to find made it easier to go to the specific sections I wanted to explore. 
@@ -76,65 +76,54 @@
         I want it to be easy for the user to understand what the website is and make it easy for the to navigate through it.
     </p>
 
-    <h2>Folder Structure:</h2>
      <!---------------------Old Folder structure------------------------>
 <div class="container">
     <div class="row">
       <div class="column-66">
-        <h1 class="xlarge-font"><b>The App</b></h1>
-        <h1 class="large-font" style="color:rgba(233, 107, 172, 0.712);"><b>Why buy it?</b></h1>
-        <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="button">Download Application</button>
+        <h3 class="xlarge-font"><b>Old Folder Structure</b></h3>
+        <p>You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="column-33">
-          <img src="../design/design_images/FolderStructure-old.png" width="Old Folder structure" height="471">
+          <img src="../design/design_images/FolderStructure-old.png" class="responsive" width="900" height="500">
       </div>
     </div>
   </div>
   
   <!-------------------- New Folder Structure---------------------------->
-  <div class="container" style="background-color:#f1f1f1">
+  <div class="container">
     <div class="row">
       <div class="column-33">
-        <img src="../design/design_images/Folderstructure-new.png" alt="New Folder structure" width="335" height="471">
+        <img src="../design/design_images/Folderstructure-new.png" alt="New Folder structure" class="responsive" width="900" height="500">
       </div>
       <div class="column-66">
-        <h1 class="xlarge-font"><b>Clarity</b></h1>
-        <h1 class="large-font" style="color:rgb(226, 137, 199);"><b>Pixels, who?</b></h1>
-        <p><span style="font-size:24px">A revolution in resolution.</span> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <button class="button" style="background-color:rgb(205, 120, 189)">Read More</button>
+        <h3 class="xlarge-font"><b>New Folder Structure</b></h3>
+        <p>Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
     </div>
   </div>
-
-  <h2>WIreflow:</h2>
 
        <!---------------------Old Wireflow------------------------>
 <div class="container">
     <div class="row">
       <div class="column-66">
-        <h1 class="xlarge-font"><b>The App</b></h1>
-        <h1 class="large-font" style="color:rgba(233, 107, 172, 0.712);"><b>Why buy it?</b></h1>
-        <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="button">Download Application</button>
+        <h3 class="xlarge-font"><b>Old wireflow</b></h3>
+        <p>You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="column-33">
-          <img src="../design/design_images/Wireflow-old.png" width="Old Wireflow" height="471">
+          <img src="../design/design_images/Wireflow-old.png" class="responsive" width="900" height="500">
       </div>
     </div>
   </div>
 
   <!-------------------- New Wireflow---------------------------->
-  <div class="container" style="background-color:#f1f1f1">
+  <div class="container">
     <div class="row">
       <div class="column-33">
-        <img src="../design/design_images/Wireflow-new.png" alt="New wireflow" width="335" height="471">
+        <img src="../design/design_images/Wireflow-new.png" alt="New wireflow" class="responsive" width="900" height="500">
       </div>
       <div class="column-66">
-        <h1 class="xlarge-font"><b>Clarity</b></h1>
-        <h1 class="large-font" style="color:rgb(226, 137, 199);"><b>Pixels, who?</b></h1>
-        <p><span style="font-size:24px">A revolution in resolution.</span> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <button class="button" style="background-color:rgb(205, 120, 189)">Read More</button>
+        <h3 class="xlarge-font"><b>New Wireflow</b></h3>
+        <p> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
       </div>
     </div>
   </div>
