--- a/design/design.html
+++ b/design/design.html
@@ -16,6 +16,10 @@
         import { initialise } from "../JS/navigation.js";
         initialise("Design");
     </script>
+    
+     <!----------Linking Font awesome kit-------------------->
+     <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+     
 </head>
 <body>
     <header>
@@ -28,22 +32,20 @@
     <h1>Design:</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
 
-    <div class="cards-design">
-        <div class="row">
-            <div class="column">
-                <div class="card">
-                    <h3>Card 1</h3>
-                    <a class="blog-link-text" href="../design/notes.html">Read More</a>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card">
-                    <h3>Card 2</h3>
-                    <a class="blog-link-text" href="../design/styleguide.html">Read More</a>
-                </div>
-            </div>
+    <div class="card-container">
+        <div class="card">
+            <h2>Dev Design Notes</h2>
+            <img src="https://images.ctfassets.net/wp1lcwdav1p1/31dUrsGyucK0UNmJEQUqj3/3c57d917e84f6500ee2ec54e8760b854/UX_vs_UI.png?w=1500&q=60" alt="Image 1">
+            <a class="blog-link-text" href="../design/notes.html">Read</a>
         </div>
+        <div class="card">
+            <h2>Styleguide</h2>
+            <img src="https://divulgingdystopia.files.wordpress.com/2020/12/screenshot-184.png?w=1490" alt="image 2">
+            <a class="blog-link-text" href="../design/styleguide.html">Read</a>
+        </div>
+        <!-- Add more cards as needed -->
     </div>
+
 
      <!-----------------------Footer------------------------------------------->
      <footer>
