update normalize css

--- a/design/design.html
+++ b/design/design.html
@@ -9,7 +9,9 @@
     <title>Design</title>
 
     <!-- CSS document linking -->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
     <link rel="stylesheet" href="../CSS/styling.css" />
+    <link rel="stylesheet" href="../CSS/csscards.css" />
 
     <!-- JS document linking -->
     <script type="module">
