--- a/design/notes.html
+++ b/design/notes.html
@@ -9,6 +9,7 @@
     <title>Design;Dev Design Notes</title>
 
      <!--CSS document linking-->
+     <link rel="stylesheet" href="../CSS/normalize.css" />
      <link rel="stylesheet" href="../CSS/styling.css" />
 
      <!--JS document linking-->
