--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -11,6 +11,8 @@
     <!-- CSS document linking -->
     <link rel="stylesheet" href="../CSS/normalize.css" />
     <link rel="stylesheet" href="../CSS/styling.css" />
+    <link rel="stylesheet" href="../CSS/csscards.css" />
+
 
     <!-- JS document linking -->
     <script type="module">
