--- a/essays/essay2.html
+++ b/essays/essay2.html
@@ -9,6 +9,7 @@
     <title>Essay 2: Digital Colonialism</title>
 
     <!--CSS document linking-->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
     <link rel="stylesheet" href="../CSS/styling.css" />
     <link rel="stylesheet" href="../CSS/blog.css" />
      
