--- a/portfolio/other/UNIIApp.html
+++ b/portfolio/other/UNIIApp.html
@@ -9,6 +9,7 @@
     <title>Portfolio:Other</title>
 
      <!--CSS document linking-->
+     <link rel="stylesheet" href="../CSS/normalize.css" />
      <link rel="stylesheet" href="/CSS/styling.css" />
      <link rel="stylesheet" href="" />
 
