--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      
     <!--JS document linking-->
      <script type="module">
-      import { initialise } from "/JS/navigation.js"
+      import { initialise } from "../WSOA3028A_2306258/JS/navigation.js"
       initialise("Home");
       </script>
 
