next and prev buttons addition

--- a/essays/essay1.html
+++ b/essays/essay1.html
@@ -19,6 +19,9 @@
       initialise("Essays");
       </script>
 
+       <!----------Linking Font awesome kit-------------------->
+       <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+       
 </head>
 <body>
     <header>
@@ -27,6 +30,8 @@
              that will be shown on my homepage-->
         </nav>
     </header>
+
+    <a href="../essays/essays.html"><i class="fa-solid fa-arrow-left"></i></a>
 
     <h1>Essay 1: UI/UX analysis</h1>
     <article>
@@ -64,6 +69,8 @@
         <p>Sridevi, S., 2014. User interface design. International Journal of Computer Science and Information Technology Research, 2(2), pp.415-426.</p>
     </article>
 
+    <!------------------------------------Next and Previous----------------------------------------------------------------->
+    <a href="../essays/essay2.html"><i class="fa-solid fa-arrow-right"></i></a>
     
 </body>
 </html>
