--- a/portfolio/other.html
+++ b/portfolio/other.html
@@ -19,6 +19,9 @@
          </script>
          <script src="../JS/blogsnav.js"></script>
 
+          <!----------Linking Font awesome kit-------------------->
+       <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+       
 </head>
 <body>
     <header>
