--- a/portfolio/other/DAweb.html
+++ b/portfolio/other/DAweb.html
@@ -18,6 +18,9 @@
          import { initialise } from "/JS/navigation.js"
          initialise("Portfolio");
          </script>
+
+          <!----------Linking Font awesome kit-------------------->
+       <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
         
 </head>
 <body>
@@ -28,8 +31,13 @@
         </nav>
     </header>
 
+    <a href="../other.html"><i class="fa-solid fa-arrow-left"></i></a>
+
     <h1>Internet Art Website</h1>
     <p>content goes here</p>
+
+    <a href="../other/UNIIApp.html"><i class="fa-solid fa-arrow-left"></i></a>
+    <a href="../other/bigsisAPI.html"><i class="fa-solid fa-arrow-right"></i></a>
 
      <!-----------------------Footer------------------------------------------->
      <footer>
