--- a/portfolio/other/bigsisAPI.html
+++ b/portfolio/other/bigsisAPI.html
@@ -18,6 +18,9 @@
          import { initialise } from "/JS/navigation.js"
          initialise("Portfolio");
          </script>
+
+          <!----------Linking Font awesome kit-------------------->
+       <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
         
 </head>
 <body>
@@ -28,6 +31,8 @@
         </nav>
     </header>
 
+    <a href="../other.html"><i class="fa-solid fa-arrow-left"></i></a>
+
     <h1>Big Sis Advice slip: API</h1>
     <div class="container">
 
@@ -36,6 +41,8 @@
         <button class="btn" id="getData">Get Advice</button>
     
       </div>
+
+      <a href="../other/DAweb.html"><i class="fa-solid fa-arrow-left"></i></a>
 
        <!-----------------------Footer------------------------------------------->
     <footer>
