--- a/essays/essay2.html
+++ b/essays/essay2.html
@@ -19,6 +19,9 @@
       initialise("Essays");
       </script>
 
+       <!----------Linking Font awesome kit-------------------->
+       <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
@@ -27,6 +30,8 @@
              that will be shown on my homepage-->
         </nav>
     </header>
+
+    <a href="../essays/essays.html"><i class="fa-solid fa-arrow-left"></i></a>
 
     <h1>Essay 2: Digital Colonialism</h1>
     <article>
@@ -69,6 +74,9 @@
         <p>Shongwe, M.M., 2017. Knowledge management in small software development organisations: A South African perspective. South African Journal of Information Management, 19(1), pp.1-9.</p>
 
     </article>
+
+ <!------------------------------------Next and Previous----------------------------------------------------------------->
+ <a href="../essays/essay1.html"><i class="fa-solid fa-arrow-left"></i></a>
 
 
 </body>
