--- a/portfolio/other.html
+++ b/portfolio/other.html
@@ -40,7 +40,7 @@
     <div class="row">
       <div class="column-66">
         <h1 class="xlarge-font"><b>UNII App</b></h1>
-        <p>A mobile app designed by students for students to help aid students with everyday mundane tasks. The app is intended to cater mainly to Wit’s students.</p>
+        <p>A mobile app designed by students for students to help aid students with everyday mundane tasks. The app is intended to cater mainly to WITS students.</p>
         <button onclick="navigateToPage('../portfolio/other/UNIIApp.html')">Read more</button>
       </div>
       <div class="column-33">
@@ -57,8 +57,8 @@
       </div>
       <div class="column-66">
         <h1 class="xlarge-font"><b>Internet Art Website</b></h1>
-        <p></p> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <button onclick="navigateToPage('../portfolio/other/DAweb.html')">Read more</button>
+        <p>Internet art, or net art, is a dynamic and innovative form of artistic expression that utilizes the internet as its primary medium. This genre transcends traditional boundaries, allowing artists to create interactive, multimedia experiences that can be accessed and shared globally.Here I created an internet art website where I chose the theme Adventure and played around with the idea to create an experience.</p>
+        <button onclick="navigateToPage('../portfolio/other/DAweb.html')">Explore more</button>
       </div>
     </div>
   </div>
@@ -68,8 +68,8 @@
     <div class="row">
       <div class="column-66">
         <h1 class="xlarge-font"><b>Big sis API</b></h1>
-        <p>Take photos like a pro. You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button onclick="navigateToPage('../portfolio/other/bigsisAPI.html')">Read more</button>
+        <p>Did you know I’m also a professional big sister? Being a big sister is a unique and rewarding experience that blends responsibility, love, and guidance. It means being a role model and a source of support for your younger siblings, sharing in their joys and helping them navigate challenges. Which means it’s your job to guide your younger siblings by giving life advice they can carry for life (even if it's from the internet…Shhhh don’t tell my sister she thinks I’m wise)</p>
+        <button onclick="navigateToPage('../portfolio/other/bigsisAPI.html')">Get Advice</button>
       </div>
       <div class="column-33">
           <img src="https://image.lexica.art/md2_webp/e9fbe8b7-2775-455d-8505-99136872ba17" width="335" height="471">
