--- a/portfolio/other/bigsisAPI.html
+++ b/portfolio/other/bigsisAPI.html
@@ -10,12 +10,12 @@
 
      <!--CSS document linking-->
      <link rel="stylesheet" href="../CSS/normalize.css" />
-     <link rel="stylesheet" href="/CSS/styling.css" />
-     <link rel="stylesheet" href="/CSS/adviceslip.css" />
+     <link rel="stylesheet" href="../CSS/styling.css" />
+     <link rel="stylesheet" href="../CSS/adviceslip.css" />
 
      <!--JS document linking-->
      <script type="module">
-         import { initialise } from "/JS/navigation.js"
+         import { initialise } from "../JS/navigation.js"
          initialise("Portfolio");
          </script>
 
