portfolio content added

--- a/portfolio/games/sushigo.html
+++ b/portfolio/games/sushigo.html
@@ -35,10 +35,43 @@
 
     <h1>Sushi Go</h1>
     <section>
-        <p>content goes here</p>
-    </section>
+      <div class="portfolio-project description">
+
+      </div>
+      
+      <div class="portfolio-images">
+          <img src="../portfolio_images/SG1.png" alt="SG screenshot 1" class="responsive" width="600" height="500">
+          <img src="../portfolio_images/SG2.png" alt="SG screenshot 2" class="responsive" width="600" height="500">
+          <img src="../portfolio_images/SG3.png" alt="SG screenshot 3" class="responsive" width="600" height="500">
+       </div>
+
+       <div class="table">
+          <table>
+            <thead>
+                <tr>
+                    <th>Category:</th>
+                    <th>Creator:</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Date Completed:</td>
+                    <td>June 2021</td>
+                </tr>
+                <tr>
+                    <td>Game programmer:</td>
+                    <td>O Magabeane</td>
+                </tr>
+                <tr>
+                    <td>UI/UX Designer</td>
+                    <td>O Magabeane</td>
+                </tr>
+            </tbody>
+        </table>
+        </div>
+  </section>
     
-    <button id="downloadBtn1">Download Zip 1</button>
+    <button id="downloadBtn1">Download Sushi Go!</button>
 
     <a href="../games/resourcegame.html"><i class="fa-solid fa-arrow-right"></i></a>
 
