--- a/portfolio/other/UNIIApp.html
+++ b/portfolio/other/UNIIApp.html
@@ -9,7 +9,7 @@
     <title>Portfolio:Other</title>
 
      <!--CSS document linking-->
-     <link rel="stylesheet" href="../CSS/normalize.css" />
+     <link rel="stylesheet" href="/CSS/normalize.css" />
      <link rel="stylesheet" href="/CSS/styling.css" />
      <link rel="stylesheet" href="" />
 
@@ -35,7 +35,7 @@
 
     <h1>UNII App Concept</h1>
     <section>
-        <p>content goes here</p>
+       
     </section>
     
     <button id="downloadBtnIndex">Download Pitch Deck</button>
