--- a/portfolio/games/sushigo.html
+++ b/portfolio/games/sushigo.html
@@ -9,13 +9,13 @@
     <title>Portfolio:Games</title>
 
      <!--CSS document linking-->
-     <link rel="stylesheet" href="/CSS/normalize.css" />
-     <link rel="stylesheet" href="/CSS/styling.css" />
+     <link rel="stylesheet" href="../../CSS/flipbook.css" />
+     <link rel="stylesheet" href="../../CSS/styling.css" />
      <link rel="stylesheet" href="" />
 
      <!--JS document linking-->
      <script type="module">
-         import { initialise } from "/JS/navigation.js"
+         import { initialise } from "../../JS/navigation.js"
          initialise("Portfolio");
          </script>
         
