css doc link testing

--- a/portfolio/other/UNIIApp.html
+++ b/portfolio/other/UNIIApp.html
@@ -9,8 +9,8 @@
     <title>Portfolio:Other</title>
 
      <!--CSS document linking-->
-     <link rel="stylesheet" href="/CSS/normalize.css" />
-     <link rel="stylesheet" href="/CSS/styling.css" />
+     <link rel="stylesheet" href="../../CSS/normalize.css" />
+     <link rel="stylesheet" href="../../CSS/styling.css" />
      <link rel="stylesheet" href="" />
 
      <!--JS document linking-->
@@ -35,7 +35,7 @@
 
     <h1>UNII App Concept</h1>
     <section>
-       
+
     </section>
     
     <button id="downloadBtnIndex">Download Pitch Deck</button>
