--- a/portfolio/games.html
+++ b/portfolio/games.html
@@ -19,6 +19,9 @@
          </script>
          <script src="../JS/blogsnav.js"></script>
 
+         <!----------Linking Font awesome kit-------------------->
+       <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
@@ -30,6 +33,8 @@
 
     <h1>Portfolio:Games</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
+
+    <a href="../portfolio/portfolio.html"><i class="fa-solid fa-arrow-left"></i></a>
 
     <div class="content-container">
     <!---------------------Sushi Go Section------------------------>
