--- a/portfolio/other/bigsisAPI.html
+++ b/portfolio/other/bigsisAPI.html
@@ -53,6 +53,6 @@
         </div>
       </footer>
 
-      <script src="/JS/adviceapi.js"></script>
+      <script src="../../JS/adviceapi.js"></script>
 </body>
 </html>
