--- a/design/notes.html
+++ b/design/notes.html
@@ -18,6 +18,9 @@
          initialise("Design");
          </script>
 
+         <!----------Linking Font awesome kit-------------------->
+       <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
      <header>
@@ -26,6 +29,8 @@
              that will be shown on my homepage-->
         </nav>
      </header>
+
+     <a href="../design/design.html" class="fa-solid fa-arrow-left"></i></a>
 
     <h1>Design: Dev Design Notes</h1>
 
