--- a/design/styleguide.html
+++ b/design/styleguide.html
@@ -35,6 +35,8 @@
         </nav>
         </header>
 
+        <a href="../design/design.html"><i class="fa-solid fa-arrow-left"></i></a>
+
         <section>
             <h1>Design: Styleguide</h1>
     
