upload styleguide images

--- a/design/styleguide.html
+++ b/design/styleguide.html
@@ -44,15 +44,15 @@
                 <div class="container">
                     <div class="flipbook">
                         <div style="background-image:url(../design/design_images/DJcover.png)"></div>
-                        <div style="background-image:url()"></div>
-                        <div style="background-image:url()"></div>
+                        <div style="background-image:url(../design/design_images/Contents.png)"></div>
+                        <div style="background-image:url(../design/design_images/OW.png)"></div>
                         <div style="background-image:url(../design/design_images/Home-old.png)"></div>
                         <div style="background-image:url(../design/design_images/Blog-old.png)"></div>
                         <div style="background-image:url(../design/design_images/Design-old.png)"></div>
                         <div style="background-image:url(../design/design_images/Porfolio-old.png)"></div>
                         <div style="background-image:url(../design/design_images/Portfolioproject-old.png)"></div>
                         <div style="background-image:url(../design/design_images/Profile-old.png)"></div>
-                        <div style="background-image:url()"></div>
+                        <div style="background-image:url(../design/design_images/NW.png)"></div>
                         <div style="background-image:url(../design/design_images/Home-new.png)"></div>
                         <div style="background-image:url(../design/design_images/Design-new.png)"></div>
                         <div style="background-image:url(./design_images/Styleguide-new.png)"></div>
@@ -64,13 +64,13 @@
                         <div style="background-image:url(../design/design_images/Porfolioproject-new.png)"></div>
                         <div style="background-image:url(./design_images/Responsive1.png)"></div>
                         <div style="background-image:url(../design/design_images/Responsive2.png)"></div>
-                        <div style="background-image:url()"></div>
+                        <div style="background-image:url(../design/design_images/UI.png)"></div>
                         <div style="background-image:url(../design/design_images/UIelements.png)"></div>
-                        <div style="background-image:url()"></div>
+                        <div style="background-image:url(../design/design_images/CP.png)"></div>
                         <div style="background-image:url(../design/design_images/CP1.png)"></div>
                         <div style="background-image:url(../design/design_images/CP2.png)"></div>
                         <div style="background-image:url(../design/design_images/CP3.png)"></div>
-                        <div style="background-image:url()"></div>
+                        <div style="background-image:url(../design/design_images/Fonts.png)"></div>
                         <div style="background-image:url(../design/design_images/Font1.png)"></div>
                         <div style="background-image:url(../design/design_images/Font2.png)"></div>
                         <div style="background-image:url(../design/design_images/Footer.png)"></div>
