--- a/design/notes.html
+++ b/design/notes.html
@@ -55,8 +55,10 @@
     </p>
 
     <h1>References and inspirations:</h1>
+    <div class="bbd-image">
     <h2>Inspiration 1: Everson Kayser's Portfolio website</h2>
     <img src="../design/design_images/EKweb.png" alt="Everson Kayser website" class="responsive" width="800" height="400">
+    </div>
     <p>This is Everson Kayser’s portfolio website. The user sees this when they scroll down once the website has loaded. 
         I like how this shows the user how much experience he has in the web development industry, his expertise and what software he has worked with. 
         The colour palette is also quite eye-catching, it isn’t too bright or dull- it’s a balance of both, but more on the darker tones side. 
@@ -64,16 +66,20 @@
         I would like my website to display my expertise similarly on the homepage.
     </p>
 
+    <div class="bbd-image">
     <h2>Inspiration 2: Rafael Varona's Portfolio Website</h2>
     <img src="../design/design_images/RVWeb.png" alt="Rafael Varona Website" class="responsive" width="800" height="400">
+    </div>
     <p>Rafel Varona offers users a colourful and creative portfolio website. He displays his work from the homepage as seen in the above image. 
         I like the creative side of it, the website does not use text too much there’s a balance of both the use of images and text. 
         For My website mostly the portfolio section, I would like to use a similar approach- where I use screenshots from my project or possibly incorporate videos of gameplay and so forth.
          The colour palette of this website looks good, it’s soft and the colours work well together along with Rafael’s work.
     </p>
 
+    <div class="bbd-image">
     <h2>Inspiration 3: Melyssa Giffins's Portfolio Website</h2>
     <img src="../design/design_images/MGWeb.png" alt="Melyssa Griffin website" class="responsive" width="800" height="400">
+    </div>
     <p>Melyssa Griffin’s was quite fun and interesting to explore. From the homepage, we can tell what the website will entail and what information we can learn and gather from looking through the website. 
         This website is easy to navigate, and everything is clear to the user making the experience quite great. 
         The link being clearly labelled and easy to find made it easier to go to the specific sections I wanted to explore. 
@@ -134,90 +140,93 @@
     </div>
   </div>
 
-  <h2>Notes: Visual aesthetic and design elements</h2>
-  <h5>Color Scheme:</h5>
-   <p>Primary Colors: Muted pastel shades dominate, creating a soft, inviting atmosphere.</p>
-      <P>Background: Clean white background enhances readability and focuses attention on content.</p>
-  <h5>Typography:</h5>
-    <p>Font Choices: Times New Roman font provide a modern, clean look.</p>
-       <P>Hierarchy: Clear distinction between headings, subheadings, and body text using varying font sizes and weights.</p>
-  <h5>Layout:</h5>
-    <p>Grid System: Utilizes a grid-based layout, ensuring alignment and balance.</p>
-	   <P>Navigation: Minimalistic navigation bar at the top, ensuring easy access to different sections.</p>
-	    <p>Content Sections: Divided into well-defined sections with ample white space for a clean look.</p>
-  <h5>Imagery and Media:</h5>
-    <p>High-Quality Images: Uses high-resolution images to enhance visual appeal.</p>
-	     <p>Interactive Elements: Incorporates interactive media to engage users.</p>
-  <h5>User Experience (UX):</h5>
-	   <p>Responsiveness: Mobile-friendly design ensures usability across devices.</p>
-	    <p>Accessibility: Ensures text contrast and button sizes are accessible to all users.</p>
-
-
-  <h2>Interaction design and Implementation notes</h2>
-  <h3>Home Page (index.html)</h3>
-<h5>Description: </h5>
-<p>The home page is the entry point of the website, providing an overview and introduction to the content. .</p>
-<h5>Key Elements: </h5>
-<p>Header: Includes a navigation bar with links to other sections. .</p>
-<p>Main Section: Contains introductory text and multimedia content (images/videos). .</p>
-<p>Footer: Includes contact information and links to social media profiles. .</p>
-<h5>Implementation Details: </h5>
-<p>Use semantic HTML5 tags (<header>, <nav>, <main>, <footer>)..</p>
-<p>Ensure responsive design using CSS media queries. .</p>
-<p>Optimize multimedia content for fast loading times. .</p>
-<h3>Profile Page (profile.html)</h3>
-<h5>Description: </h5>
-<p>Provides detailed information about the author/ a profile. .</p>
-<h5>Key Elements: </h5>
-<p>Header: Same as home page for consistency. .</p>
-<p>Main Section: Text and images describing the profile. .</p>
-<p>Footer: Same as home page. .</p>
-<h5>Implementation Details:</h5>
-<p>Use consistent styling with the home page. .</p>
-<p>Include alt attributes for images for accessibility. .</p>
-<p>Ensure text is clear and easy to read.</p>
-<h3>Portfolio Page (portfolio.html)</h3>
-<h5>Description:</h5>
-<p>Showcases various projects or works with descriptions and multimedia content.</p>
-<h5>Key Elements:</h5>
-<p>Header: Consistent with other pages.</p>
-<p>Main Section: Grid or list layout of projects with thumbnails and brief descriptions.</p>
-<p>Footer: Same as home page.</p>
-<h5>Implementation Details:</h5>
-<p>Implement a grid layout using CSS Flexbox or Grid. </p>
-<p>Ensure each project is clickable and links to a detailed view. </p>
-<p>Optimize images for quick loading.</p>
-<h3> Footer</h3>
-<h5>Description:</h5>
-<p>Allows visitors to get in touch </p>
-<h5>Key Elements:</h5>
-<p>Header: Consistent with other pages.</p>
-<p>Footer: Contact form with fields for name, email, and message. .</p>
-<h5>Implementation Details:</h5>
-<p>Validate form inputs using JavaScript. .</p>
-<p>Style the form for usability and accessibility. .</p>
-<h3>CSS (styles.css)</h3>
-<h5>Description:</h5>
-<p>Stylesheet for the entire website. .</p>
-<h5>Key Elements:</h5>
-<p>Global Styles: Reset styles, typography, color scheme. .</p>
-<p>Layout Styles: Header, main, footer. .</p>
-<p>Component Styles: Buttons, forms, images. .</p>
-<h5>Implementation Details:</h5>
-<p>Use a CSS preprocessor like SASS for modular and maintainable styles. .</p>
-<p>Implement responsive design principles. .</p>
-<p>Ensure cross-browser compatibility. .</p>
-<h3>JavaScript (scripts.js)</h3>
-<h5>Description:</h5>
-<p>Adds interactivity to the website. .</p>
-<h5>Key Elements:</h5>
-<p>Form Validation: Validate contact form inputs. .</p>
-<p>Navigation: Smooth scrolling for anchor links. .</p>
-<p>Multimedia Controls: Play/pause for videos, image sliders. .</p>
-<h5>Implementation Details:</h5>
-<p>Use vanilla JavaScript or a library like jQuery for DOM manipulation. .</p>
-<p>Ensure scripts load asynchronously to improve page load times. .</p>
-<p>Implement event listeners for user interactions. .</p>
+  <div class="DevDesign-notes">
+    <h2>Notes: Visual aesthetic and design elements</h2>
+    <h5>Color Scheme:</h5>
+     <p>Primary Colors: Muted pastel shades dominate, creating a soft, inviting atmosphere.</p>
+        <P>Background: Clean white background enhances readability and focuses attention on content.</p>
+    <h5>Typography:</h5>
+      <p>Font Choices: Times New Roman font provide a modern, clean look.</p>
+         <P>Hierarchy: Clear distinction between headings, subheadings, and body text using varying font sizes and weights.</p>
+    <h5>Layout:</h5>
+      <p>Grid System: Utilizes a grid-based layout, ensuring alignment and balance.</p>
+       <P>Navigation: Minimalistic navigation bar at the top, ensuring easy access to different sections.</p>
+        <p>Content Sections: Divided into well-defined sections with ample white space for a clean look.</p>
+    <h5>Imagery and Media:</h5>
+      <p>High-Quality Images: Uses high-resolution images to enhance visual appeal.</p>
+         <p>Interactive Elements: Incorporates interactive media to engage users.</p>
+    <h5>User Experience (UX):</h5>
+       <p>Responsiveness: Mobile-friendly design ensures usability across devices.</p>
+        <p>Accessibility: Ensures text contrast and button sizes are accessible to all users.</p>
+  
+  
+    <h2>Interaction design and Implementation notes</h2>
+    <h3>Home Page (index.html)</h3>
+  <h5>Description: </h5>
+  <p>The home page is the entry point of the website, providing an overview and introduction to the content. .</p>
+  <h5>Key Elements: </h5>
+  <p>Header: Includes a navigation bar with links to other sections. .</p>
+  <p>Main Section: Contains introductory text and multimedia content (images/videos). .</p>
+  <p>Footer: Includes contact information and links to social media profiles. .</p>
+  <h5>Implementation Details: </h5>
+  <p>Use semantic HTML5 tags (<header>, <nav>, <main>, <footer>)..</p>
+  <p>Ensure responsive design using CSS media queries. .</p>
+  <p>Optimize multimedia content for fast loading times. .</p>
+  <h3>Profile Page (profile.html)</h3>
+  <h5>Description: </h5>
+  <p>Provides detailed information about the author/ a profile. .</p>
+  <h5>Key Elements: </h5>
+  <p>Header: Same as home page for consistency. .</p>
+  <p>Main Section: Text and images describing the profile. .</p>
+  <p>Footer: Same as home page. .</p>
+  <h5>Implementation Details:</h5>
+  <p>Use consistent styling with the home page. .</p>
+  <p>Include alt attributes for images for accessibility. .</p>
+  <p>Ensure text is clear and easy to read.</p>
+  <h3>Portfolio Page (portfolio.html)</h3>
+  <h5>Description:</h5>
+  <p>Showcases various projects or works with descriptions and multimedia content.</p>
+  <h5>Key Elements:</h5>
+  <p>Header: Consistent with other pages.</p>
+  <p>Main Section: Grid or list layout of projects with thumbnails and brief descriptions.</p>
+  <p>Footer: Same as home page.</p>
+  <h5>Implementation Details:</h5>
+  <p>Implement a grid layout using CSS Flexbox or Grid. </p>
+  <p>Ensure each project is clickable and links to a detailed view. </p>
+  <p>Optimize images for quick loading.</p>
+  <h3> Footer</h3>
+  <h5>Description:</h5>
+  <p>Allows visitors to get in touch </p>
+  <h5>Key Elements:</h5>
+  <p>Header: Consistent with other pages.</p>
+  <p>Footer: Contact form with fields for name, email, and message. .</p>
+  <h5>Implementation Details:</h5>
+  <p>Validate form inputs using JavaScript. .</p>
+  <p>Style the form for usability and accessibility. .</p>
+  <h3>CSS (styles.css)</h3>
+  <h5>Description:</h5>
+  <p>Stylesheet for the entire website. .</p>
+  <h5>Key Elements:</h5>
+  <p>Global Styles: Reset styles, typography, color scheme. .</p>
+  <p>Layout Styles: Header, main, footer. .</p>
+  <p>Component Styles: Buttons, forms, images. .</p>
+  <h5>Implementation Details:</h5>
+  <p>Use a CSS preprocessor like SASS for modular and maintainable styles. .</p>
+  <p>Implement responsive design principles. .</p>
+  <p>Ensure cross-browser compatibility. .</p>
+  <h3>JavaScript (scripts.js)</h3>
+  <h5>Description:</h5>
+  <p>Adds interactivity to the website. .</p>
+  <h5>Key Elements:</h5>
+  <p>Form Validation: Validate contact form inputs. .</p>
+  <p>Navigation: Smooth scrolling for anchor links. .</p>
+  <p>Multimedia Controls: Play/pause for videos, image sliders. .</p>
+  <h5>Implementation Details:</h5>
+  <p>Use vanilla JavaScript or a library like jQuery for DOM manipulation. .</p>
+  <p>Ensure scripts load asynchronously to improve page load times. .</p>
+  <p>Implement event listeners for user interactions. .</p>
+  
+  </div>
 
    <!-----------------------Footer------------------------------------------->
    <footer>
