styleguide and JS update

--- a/design/styleguide.html
+++ b/design/styleguide.html
@@ -39,6 +39,12 @@
 
         <section>
             <h1>Design: Styleguide</h1>
+
+            <div class="DevDesign-notes">
+                <p>
+                    This is my styleguide, this is where the magic happens where I design various wireframes, explore colour palette ideas, and just an overview of changes I make and new ideas that arise during the production process
+                </p>
+            </div>
     
             <div class="flipbook-viewport">
                 <div class="container">
@@ -82,7 +88,7 @@
             <!-----------------------Footer------------------------------------------->
     <footer>
         <div class="footer">
-          <p>Contact:</p>
+          <p>Where you can find me:</p>
             <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
             <a href=""><i class="fa-regular fa-envelope"></i></a>
             <a href=""><i class="fa-brands fa-discord"></i></a>
