--- a/portfolio/games/resourcegame.html
+++ b/portfolio/games/resourcegame.html
@@ -87,6 +87,6 @@
       </footer>
       
       <!------------JS Linking---------------------->
-          <script src="/JS/download.js"></script>
+          <script src="../../JS/download.js"></script>
 </body>
 </html>
